# asteroid-diameter-prediction

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  setup.py
.dvc/: config
data/: .gitignore  Asteroid.csv.dvc  Asteroid_enriched.csv.dvc  Asteroid_processed.csv.dvc
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
dvclive/: metrics.json
dvclive/plots/custom/: Coefficient values.json  Coefficient_values.json
dvclive/plots/metrics/: $R^2$.tsv  RMSE.tsv
models/: .gitignore
notebooks/: interpretable-regression-modelling-gbm.ipynb
src/asteroid_diameter_prediction/: __init__.py  utils.py
src/asteroid_diameter_prediction/models/: diameter_prediction_model.sav
src/asteroid_diameter_prediction/train/: enrich_features.py  make_dataset.py  train_model.py
