[tool.poetry]
name = "asteroid-diameter-prediction"
version = "0.1.0"
description = "Predicting asteroid diameters from the Open Asteroid Dataset https://www.kaggle.com/datasets/basu369victor/prediction-of-asteroid-diameter. Toy repo to learn MLOps best practices."
authors = ["SanchitNardekar <sanchit@motorway.co.uk>"]
readme = "README.md"
repository = "https://github.com/SanchitNardekar/asteroid-diameter-prediction"
homepage = "https://github.com/SanchitNardekar/asteroid-diameter-prediction"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
click = "^8.1.7"
pandas = "^2.1.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
